--- a/TradeProAssistant/TradeProAssistant.csproj
+++ b/TradeProAssistant/TradeProAssistant.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Models\OpcGetStockPriceResponse.cs" />
     <Compile Include="Models\SecurityModel.cs" />
     <Compile Include="Models\StrategiesModel.cs" />
+    <Compile Include="Models\MarketStructureQualifiersModel.cs" />
     <Compile Include="Models\TradeQualifiersModel.cs" />
     <Compile Include="Models\WeeklyIncomeModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -380,6 +381,7 @@
     <Content Include="Views\TradeProStrategy\_TradeTicketsTable.cshtml" />
     <Content Include="Views\TradeProStrategy\_TradeDayPerformanceTable.cshtml" />
     <Content Include="Views\TradeProStrategy\_TradeTicketQualifiers.cshtml" />
+    <Content Include="Views\TradeProStrategy\_MarketStructureQualifiers.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
