--- a/TradeProAssistant.Data/TradeProAssistant.Data.csproj
+++ b/TradeProAssistant.Data/TradeProAssistant.Data.csproj
@@ -682,11 +682,18 @@
     <Compile Include="Migrations\202005131940308_AddMarketStructureQualifiers.designer.cs">
       <DependentUpon>202005131940308_AddMarketStructureQualifiers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202005160305552_AddNbtField.cs" />
+    <Compile Include="Migrations\202005160305552_AddNbtField.designer.cs">
+      <DependentUpon>202005160305552_AddNbtField.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\BenzingaNewsResponse.cs" />
     <Compile Include="Models\DayPerformanceModel.cs" />
     <Compile Include="Models\OpcGetOptionChainResponse.cs" />
     <Compile Include="Models\OpcGetStockPriceResponse.cs" />
+    <Compile Include="Models\PerformanceModel.cs" />
+    <Compile Include="Models\MonthPerformanceModel.cs" />
+    <Compile Include="Models\WeekPerformanceModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServicesFolder\Base\BearCallSpreadServiceBase.cs">
       <DependentUpon>ServiceBase.txt4</DependentUpon>
@@ -840,6 +847,9 @@
     <EmbeddedResource Include="Migrations\202005131940308_AddMarketStructureQualifiers.resx">
       <DependentUpon>202005131940308_AddMarketStructureQualifiers.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202005160305552_AddNbtField.resx">
+      <DependentUpon>202005160305552_AddNbtField.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="SeedData\SP500_Constituents.csv" />
     <EmbeddedResource Include="SeedData\SPMidCap_Constituents.csv" />
     <EmbeddedResource Include="SeedData\SPSmallCap_Constituents.csv" />
@@ -883,7 +893,9 @@
     </Content>
     <EmbeddedResource Include="SeedData\WeeklyOptionSecurities.csv" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Utilities\" />
+  </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
